crates/sigil-compiler/tests/snapshots/snap_air__enum_with_payload_variant.snap
---
source: crates/sigil-compiler/tests/snap_air.rs
expression: "&comp.air"
---
AirProgram {
    functions: [
        AirFunction {
            name: "m::wrap",
            export_name: "m__wrap",
            ring: Inner,
            kind: ModuleFunction,
            params: [
                (
                    VarId(
                        0,
                    ),
                    I64,
                ),
            ],
            ret: Ptr,
            locals: [
                (
                    VarId(
                        1,
                    ),
                    Ptr,
                ),
                (
                    VarId(
                        2,
                    ),
                    I32,
                ),
            ],
            value_kinds: {
                VarId(
                    0,
                ): Copy,
                VarId(
                    1,
                ): Copy,
                VarId(
                    2,
                ): Copy,
            },
            debug_names: {
                VarId(
                    0,
                ): "x",
                VarId(
                    1,
                ): "v1",
                VarId(
                    2,
                ): "__enum_tag",
            },
            blocks: [
                AirBlock {
                    id: BlockId(
                        0,
                    ),
                    stmts: [
                        FuelDecrement {
                            amount: 1,
                        },
                        BumpAlloc {
                            dst: VarId(
                                1,
                            ),
                            size_bytes: 12,
                            align: 4,
                            persistent: false,
                        },
                        Assign {
                            dst: VarId(
                                2,
                            ),
                            val: IntLit(
                                1,
                            ),
                        },
                        StoreField {
                            base_ptr: VarId(
                                1,
                            ),
                            offset: 0,
                            val: VarId(
                                2,
                            ),
                            ty: I32,
                        },
                        StoreField {
                            base_ptr: VarId(
                                1,
                            ),
                            offset: 4,
                            val: VarId(
                                0,
                            ),
                            ty: I64,
                        },
                    ],
                    terminator: Return(
                        Some(
                            VarId(
                                1,
                            ),
                        ),
                    ),
                },
            ],
            entry_block: BlockId(
                0,
            ),
        },
        AirFunction {
            name: "option::init",
            export_name: "option__init",
            ring: Inner,
            kind: ModuleInit,
            params: [],
            ret: Unit,
            locals: [],
            value_kinds: {},
            debug_names: {},
            blocks: [
                AirBlock {
                    id: BlockId(
                        0,
                    ),
                    stmts: [],
                    terminator: Return(
                        None,
                    ),
                },
            ],
            entry_block: BlockId(
                0,
            ),
        },
        AirFunction {
            name: "result::init",
            export_name: "result__init",
            ring: Inner,
            kind: ModuleInit,
            params: [],
            ret: Unit,
            locals: [],
            value_kinds: {},
            debug_names: {},
            blocks: [
                AirBlock {
                    id: BlockId(
                        0,
                    ),
                    stmts: [],
                    terminator: Return(
                        None,
                    ),
                },
            ],
            entry_block: BlockId(
                0,
            ),
        },
    ],
}
