crates/sigil-compiler/tests/snapshots/snap_air__match_arm_literal_narrowing.snap
---
source: crates/sigil-compiler/tests/snap_air.rs
expression: "&comp.air"
---
AirProgram {
    functions: [
        AirFunction {
            name: "m::classify",
            export_name: "m__classify",
            ring: Inner,
            kind: ModuleFunction,
            params: [
                (
                    VarId(
                        0,
                    ),
                    I64,
                ),
            ],
            ret: I64,
            locals: [
                (
                    VarId(
                        1,
                    ),
                    I64,
                ),
                (
                    VarId(
                        2,
                    ),
                    Bool,
                ),
                (
                    VarId(
                        3,
                    ),
                    I64,
                ),
                (
                    VarId(
                        4,
                    ),
                    I64,
                ),
                (
                    VarId(
                        5,
                    ),
                    Bool,
                ),
                (
                    VarId(
                        6,
                    ),
                    I64,
                ),
                (
                    VarId(
                        7,
                    ),
                    I64,
                ),
            ],
            value_kinds: {
                VarId(
                    0,
                ): Copy,
                VarId(
                    1,
                ): Copy,
                VarId(
                    2,
                ): Copy,
                VarId(
                    3,
                ): Copy,
                VarId(
                    4,
                ): Copy,
                VarId(
                    5,
                ): Copy,
                VarId(
                    6,
                ): Copy,
                VarId(
                    7,
                ): Copy,
            },
            debug_names: {
                VarId(
                    0,
                ): "x",
                VarId(
                    1,
                ): "match_lit",
                VarId(
                    2,
                ): "match_cond",
                VarId(
                    3,
                ): "v3",
                VarId(
                    4,
                ): "match_lit",
                VarId(
                    5,
                ): "match_cond",
                VarId(
                    6,
                ): "v6",
                VarId(
                    7,
                ): "v7",
            },
            blocks: [
                AirBlock {
                    id: BlockId(
                        0,
                    ),
                    stmts: [],
                    terminator: Dispatch {
                        start: BlockId(
                            2,
                        ),
                        exit: BlockId(
                            1,
                        ),
                    },
                },
                AirBlock {
                    id: BlockId(
                        2,
                    ),
                    stmts: [
                        Assign {
                            dst: VarId(
                                1,
                            ),
                            val: IntLit(
                                0,
                            ),
                        },
                        Assign {
                            dst: VarId(
                                2,
                            ),
                            val: Binary {
                                lhs: VarId(
                                    0,
                                ),
                                op: Eq,
                                rhs: VarId(
                                    1,
                                ),
                            },
                        },
                    ],
                    terminator: Branch {
                        cond: VarId(
                            2,
                        ),
                        then_block: BlockId(
                            3,
                        ),
                        else_block: BlockId(
                            4,
                        ),
                        merge_block: Some(
                            BlockId(
                                4,
                            ),
                        ),
                    },
                },
                AirBlock {
                    id: BlockId(
                        3,
                    ),
                    stmts: [
                        Assign {
                            dst: VarId(
                                3,
                            ),
                            val: IntLit(
                                100,
                            ),
                        },
                    ],
                    terminator: Return(
                        Some(
                            VarId(
                                3,
                            ),
                        ),
                    ),
                },
                AirBlock {
                    id: BlockId(
                        4,
                    ),
                    stmts: [
                        Assign {
                            dst: VarId(
                                4,
                            ),
                            val: IntLit(
                                1,
                            ),
                        },
                        Assign {
                            dst: VarId(
                                5,
                            ),
                            val: Binary {
                                lhs: VarId(
                                    0,
                                ),
                                op: Eq,
                                rhs: VarId(
                                    4,
                                ),
                            },
                        },
                    ],
                    terminator: Branch {
                        cond: VarId(
                            5,
                        ),
                        then_block: BlockId(
                            5,
                        ),
                        else_block: BlockId(
                            6,
                        ),
                        merge_block: Some(
                            BlockId(
                                6,
                            ),
                        ),
                    },
                },
                AirBlock {
                    id: BlockId(
                        5,
                    ),
                    stmts: [
                        Assign {
                            dst: VarId(
                                6,
                            ),
                            val: IntLit(
                                200,
                            ),
                        },
                    ],
                    terminator: Return(
                        Some(
                            VarId(
                                6,
                            ),
                        ),
                    ),
                },
                AirBlock {
                    id: BlockId(
                        6,
                    ),
                    stmts: [],
                    terminator: Jump(
                        BlockId(
                            7,
                        ),
                    ),
                },
                AirBlock {
                    id: BlockId(
                        7,
                    ),
                    stmts: [
                        Assign {
                            dst: VarId(
                                7,
                            ),
                            val: IntLit(
                                0,
                            ),
                        },
                    ],
                    terminator: Return(
                        Some(
                            VarId(
                                7,
                            ),
                        ),
                    ),
                },
                AirBlock {
                    id: BlockId(
                        1,
                    ),
                    stmts: [],
                    terminator: Return(
                        None,
                    ),
                },
            ],
            entry_block: BlockId(
                0,
            ),
        },
    ],
}
