crates/sigil-compiler/tests/snapshots/snap_air__parametric_identity.snap
---
source: crates/sigil-compiler/tests/snap_air.rs
expression: "&comp.air"
---
AirProgram {
    functions: [
        AirFunction {
            name: "m::pin_i64",
            export_name: "m__pin_i64",
            ring: Inner,
            kind: ModuleFunction,
            params: [],
            ret: I64,
            locals: [
                (
                    VarId(
                        0,
                    ),
                    I64,
                ),
                (
                    VarId(
                        1,
                    ),
                    I64,
                ),
            ],
            value_kinds: {
                VarId(
                    0,
                ): Copy,
                VarId(
                    1,
                ): Copy,
            },
            debug_names: {
                VarId(
                    0,
                ): "v0",
                VarId(
                    1,
                ): "v1",
            },
            blocks: [
                AirBlock {
                    id: BlockId(
                        0,
                    ),
                    stmts: [
                        Assign {
                            dst: VarId(
                                1,
                            ),
                            val: IntLit(
                                42,
                            ),
                        },
                        FuelDecrement {
                            amount: 1,
                        },
                        Call {
                            dst: Some(
                                VarId(
                                    0,
                                ),
                            ),
                            func: FuncId(
                                1,
                            ),
                            args: [
                                VarId(
                                    1,
                                ),
                            ],
                        },
                    ],
                    terminator: Return(
                        Some(
                            VarId(
                                0,
                            ),
                        ),
                    ),
                },
            ],
            entry_block: BlockId(
                0,
            ),
        },
        AirFunction {
            name: "m::identity__i64",
            export_name: "identity__i64",
            ring: Inner,
            kind: ModuleFunction,
            params: [
                (
                    VarId(
                        0,
                    ),
                    I64,
                ),
            ],
            ret: I64,
            locals: [],
            value_kinds: {
                VarId(
                    0,
                ): Copy,
            },
            debug_names: {
                VarId(
                    0,
                ): "x",
            },
            blocks: [
                AirBlock {
                    id: BlockId(
                        0,
                    ),
                    stmts: [],
                    terminator: Return(
                        Some(
                            VarId(
                                0,
                            ),
                        ),
                    ),
                },
            ],
            entry_block: BlockId(
                0,
            ),
        },
    ],
}
